# utsuru

./: CODE_OF_CONDUCT.md  CREDITS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
docs/: getting-started.md
src/: error.rs  lib.rs
src/mirrors/: mod.rs
src/mirrors/discord/: dave.rs  endpoint.rs  gateway.rs  heartbeat.rs  mod.rs
src/sources/: mod.rs  whip.rs
src/utils/: bitstream.rs  codecs.rs  h264_parser.rs  h264_synthesizer.rs  io.rs  mod.rs
web/: package.json  svelte.config.js
web/src/routes/: +page.svelte  AddMirror.svelte  RemoveMirror.svelte
web_dist/: bundle.css  bundle.js  index.html
