[package]
name = "utsuru"
version = "0.2.0"
authors = ["Vincent Verdynanta <connect@vincent.id>"]
edition = "2024"
description = "A WebRTC utility for forwarding track packets from a single source to multiple mirrors."
license = "MIT"
repository = "https://github.com/VincentVerdynanta/utsuru"
default-run = "utsuru"

[lib]
name = "utsuru"
path = "src/lib.rs"

[[bin]]
name = "utsuru"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
axum = { version = "0.8", optional = true }
bytes = "1"
clap = { version = "4.5", optional = true }
clap_complete = { version = "4.5", optional = true }
davey = "0.0.1-pre.6"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
rand = "0.9"
rustls = { version = "0.23.32", default-features = false, features = ["ring", "tls12"] }
serde = "1"
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "io-util"] }
tokio-websockets = { version = "0.12", features = ["client", "fastrand", "ring", "rustls-platform-verifier", "sha1_smol"] }
tower = { version = "0.5", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
twilight-gateway = "0.16"
twilight-model = "0.16"
uuid = { version = "1", features = ["v4"] }
webrtc = "0.14"

[features]
default = ["cli"]
cli = ["axum", "clap", "clap_complete", "tower", "tracing-subscriber"]

[profile.release]
codegen-units = 1
debug = "full"
lto = true
opt-level = 3
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
incremental = true
